test/cases/compile_errors/reify_enum_with_duplicate_field.zig
export fn entry() void {
    _ = @Enum(u32, .nonexhaustive, &.{ "A", "A" }, &.{ 0, 1 });
}

// error
//
// :2:36: error: duplicate enum field 'A'
// :2:36: note: other field here
